# sfml-snake-demo

./: CMakeLists.txt  Map.h  Point.h  README.md  Stage.cpp  Stage.h  fann_ai.cpp  main.cpp
src/ai/: fann_ai.h
src/core/: Map.cpp  snake.cpp  snake.h
